--- a/study.html
+++ b/study.html
@@ -162,7 +162,44 @@
         return res;
     }
 
-    console.log(getTagName("div"));
+    console.log(getTagName("title"));
+
+    var str = "hello dom";
+    var o ={};
+    for (let i = 0; i < str.length; i++) {
+        if (o[str[i]]){
+            o[str[i]]++;
+        }else{
+            o[str[i]]=1;
+        }
+    }
+    console.log(o);
+
+
+    //获取每个标签出现的次数
+    function countNum() {
+        var html = document.querySelector("html");
+        var htmlElements =[html];
+        var res ={};
+        for (let i = 0; i < htmlElements.length; i++) {
+
+            if (htmlElements[i].children && htmlElements[i].children.length>0){
+                for (let j = 0; j < htmlElements[i].children.length; j++) {
+                    htmlElements.push(htmlElements[i].children[j]);
+                }
+            }
+            var localName = htmlElements[i].localName;
+            if (res[localName]){
+                res[localName]++;
+            }else {
+                res[localName]=1;
+            }
+        }
+        return res;
+
+    }
+
+    console.log(countNum());
 
 
 </script>
