--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 <h1>1206作业</h1>
+<a href="1.html">分时问候</a><br>
+<a href="2.html">关闭淘宝</a><br>
+<a href="3.html">精灵图渲染</a><br>
+<a href="4.html">密码提示</a><br>
+<a href="5.html">复选框选择</a>
 </body>
 </html>
