--- a/2.html
+++ b/2.html
@@ -11,7 +11,7 @@
 </style>
 <body>
 <div>
-    <input type="button" value="X" onclick="closeImage()"><img src="images/tao.png">
+    <input type="button" value="X" onclick="closeImage()"><img src="./images/tao.png">
 </div>
 </body>
 <script>
