--- a/3.html
+++ b/3.html
@@ -8,7 +8,7 @@
             display: inline-block;
             width: 44px;
             height: 40px;
-            background-image: url('images/sprite.png'); /* 精灵图的路径 */
+            background-image: url('./images/sprite.png'); /* 精灵图的路径 */
             background-position: -0px -0px; /* 精灵图的偏移量 */
             background-size: auto; /* 默认尺寸 */
             background-repeat: no-repeat; /* 防止背景重复 */
