--- a/4.html
+++ b/4.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>密码框格式提示信息</h1>
-设置密码：<input type="password" onblur="checkPwd()"><img src="images/right.png"><span>请输入正确的登录密码</span>
+设置密码：<input type="password" onblur="checkPwd()"><img src="./images/right.png"><span>请输入正确的登录密码</span>
 </body>
 
 <script>
@@ -18,11 +18,11 @@
         var inputEle = document.querySelector("input");
         if (inputEle.value.length>=6 && inputEle.value.length<=16){
             imgEle.style="display:inline-block";
-            imgEle.src="images/right.png";
+            imgEle.src="./images/right.png";
             spanEle.style="display:none";
         }else{
             imgEle.style="display:inline-block;color:red";
-            imgEle.src="images/wrong.png";
+            imgEle.src="./images/wrong.png";
             spanEle.style="display:inline;color:red";
         }
     }
